<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <Toolbar
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/toolbar_design"
        android:layout_marginTop="12dp"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/alfa_slab_one"
            android:text="@string/covid_19_tracker"
            android:textColor="@color/white"
            android:textSize="18sp" />
    </Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="5dp"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/total_statistics"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:letterSpacing="0.1"
                android:layout_marginTop="14dp"
                android:layout_marginBottom="10dp"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:baselineAligned="false">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="5dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:layout_marginEnd="5dp"
                    android:background="@drawable/box_design"
                    >
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/total_confirmed"
                        android:textSize="14sp"
                        android:textColor="@color/black"
                        />
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/active"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/_0000"
                        android:textSize="12sp"
                        android:id="@+id/TotalCon"
                        android:textColor="#F44336"
                        />

                </LinearLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="5dp"
                    android:gravity="center"
                    android:layout_marginEnd="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/box_design"
                    >
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/total_recovered"
                        android:textSize="14sp"
                        android:textColor="@color/black"
                        />
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/healthy"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/_0000"
                        android:textSize="12sp"
                        android:id="@+id/TotalRec"
                        android:textColor="@color/Green_400"
                        />

                </LinearLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="5dp"
                    android:gravity="center"
                    android:layout_weight="1"
                    android:background="@drawable/box_design"
                    >
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/total_deceased"
                        android:textSize="14sp"
                        android:textColor="@color/black"
                        />
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/danger"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/_0000"
                        android:textSize="12sp"
                        android:id="@+id/TotalDec"
                        android:textColor="@color/Orange_500"
                        />

                </LinearLayout>

            </LinearLayout>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/yesterday_s_statistics"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:letterSpacing="0.1"
                android:layout_marginTop="14dp"
                android:layout_marginBottom="10dp"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="32dp"
                android:baselineAligned="false">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="5dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:layout_marginEnd="5dp"
                    android:background="@drawable/box_design"
                    >
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/total_confirmed"
                        android:textSize="14sp"
                        android:textColor="@color/black"
                        />
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/active"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/_0000"
                        android:textSize="12sp"
                        android:id="@+id/TodayCon"
                        android:textColor="#F44336"
                        />

                </LinearLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="5dp"
                    android:gravity="center"
                    android:layout_marginEnd="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/box_design"
                    >
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/total_recovered"
                        android:textSize="14sp"
                        android:textColor="@color/black"
                        />
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/healthy"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/_0000"
                        android:textSize="12sp"
                        android:id="@+id/TodayRec"
                        android:textColor="@color/Green_400"
                        />

                </LinearLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="5dp"
                    android:gravity="center"
                    android:layout_weight="1"
                    android:background="@drawable/box_design"
                    >
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/total_deceased"
                        android:textSize="14sp"
                        android:textColor="@color/black"
                        />
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/danger"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/_0000"
                        android:textSize="12sp"
                        android:id="@+id/TodayDec"
                        android:textColor="@color/Orange_500"
                        />

                </LinearLayout>

            </LinearLayout>


            <ImageButton
                android:layout_width="259dp"
                android:layout_height="206dp"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/image_design"
                android:onClick="stateCount"
                android:paddingBottom="0dp"
                android:requiresFadingEdge="vertical"
                android:scaleType="fitCenter"
                android:src="@drawable/corona" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="Check my count!"
                android:textColor="#F44336"
                android:textSize="18sp"
                android:textStyle="bold|italic" />


        </LinearLayout>

    </ScrollView>

</LinearLayout>
</layout>